--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.projectVersion=1.0
 sonar.sources=src
 sonar.sourceEncoding=UTF-8
 sonar.java.binaries=target/classes
-sonar.java.libraries=target/dependency/*.jar
+sonar.java.libraries=target/*.jar
 sonar.token=sqp_324708f6ea3068c86beae153516e19ef645cebcf
