fourth commit - sonar properties update

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=my-springboot-microservice
-sonar.projectName=My Spring Boot Microservice
+sonar.projectKey=ToDo
+sonar.projectName=ToDo
 sonar.projectVersion=1.0
 sonar.sources=src
 sonar.sourceEncoding=UTF-8
